prevent the UI from breaking on small screens

--- a/src/stylesheets/components/Layout.sass
+++ b/src/stylesheets/components/Layout.sass
@@ -1,5 +1,6 @@
+
 .layout
-  min-width: 800px
+  min-width: 300px
   flex: 1 1 100%
   display: flex
   flex-direction: row
