--- a/src/stylesheets/components/secrets/SecretListItem.sass
+++ b/src/stylesheets/components/secrets/SecretListItem.sass
@@ -1,5 +1,6 @@
+
 .secret-list-item
-  height: 50px
+  min-height: 50px
   background-color: transparent
 
 .secret-list-item:hover
@@ -10,6 +11,8 @@
     padding: 0 0 0 10px
     border-bottom: 1px solid rgba($color-brand, .05)
     vertical-align: middle
+    @media screen and (max-width: $width-small)
+      padding: 0 0 0 2px
 
 .secret-list-content-table--is-dragging
   .secret-list-item
@@ -50,9 +53,13 @@
 
 .secret-list-item-column--last-modified
   width: 200px
+  @media screen and (max-width: $width-small)
+    display: none
 
 .secret-list-item-column--shared-with
   width: 80px
+  @media screen and (max-width: $width-small)
+    display: none
 
 .secret-list-item-column--actions
   width: 36px
