--- a/src/stylesheets/components/utilities/Breadcrumb.sass
+++ b/src/stylesheets/components/utilities/Breadcrumb.sass
@@ -5,6 +5,8 @@
   align-items: center
   height: 24px
   font-size: 18px
+  @media screen and (max-width: $width-small)
+    font-size: 1rem
 
 .breadcrumb-item-separator
   display: block
