--- a/src/stylesheets/components/utilities/Page.sass
+++ b/src/stylesheets/components/utilities/Page.sass
@@ -13,6 +13,10 @@
   margin: 0 20px 0px
   height: 50px
   border-bottom: 1px solid rgba($color-brand, .05)
+  @media screen and (max-width: $width-small)
+    flex: 0 0 30px
+    height: 30px
+    margin: 0 5px 0px
 
   .secret-list-refresh
     margin-right: 10px
@@ -28,6 +32,9 @@
   overflow: auto
   margin-top: 20px
   padding: 0 0px 20px 20px
+  @media screen and (max-width: $width-small)
+    padding: 0 5px
+    margin-top: 5px
 
 .page-content-actions
   display: inherit
